# kinetics-54k-rewrite

./: .gitignore  README.md  main.py  pyproject.toml
src/rewrite/: __init__.py  cli.py  hardware.py  parallel.py  pipeline.py  worker.py
src/rewrite/annotations/: __init__.py  download.py  io.py  records.py
src/rewrite/model/: __init__.py  captioner.py
src/rewrite/videos/: __init__.py  fetch.py  frames.py  resolve.py
